--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@symfony/webpack-encore": "^5.1.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@vitejs/plugin-vue": "^6.0.1",
     "@vue/compiler-sfc": "^3.5.18",
     "autoprefixer": "^10.4.21",
     "core-js": "^3.45.0",
@@ -16,9 +17,9 @@
     "postcss-loader": "^8.1.0",
     "regenerator-runtime": "^0.14.1",
     "storybook": "^8.6.14",
-    "vite": "^5.4.10",
     "tailwindcss": "^3.4.17",
     "ts-loader": "^9.0.0",
+    "vite": "^5.4.10",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
     "webpack": "^5.101.0",
@@ -43,6 +44,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "storybook:catalog": "storybook dev -p 6007 -c assets/catalog/.storybook",
-    "build-storybook:catalog": "storybook build -c assets/catalog/.storybook -o public/storybook-catalog"
+    "build-storybook:catalog": "storybook build -c assets/catalog/.storybook -o public/storybook-catalog",
+    "storybook:admin": "storybook dev -p 6008 -c assets/admin/.storybook",
+    "build-storybook:admin": "storybook build -c assets/admin/.storybook -o public/storybook-admin"
   }
 }
