--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@storybook/vue3-vite": "^8.6.14",
     "@symfony/webpack-encore": "^5.1.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/compiler-sfc": "^3.5.18",
