--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,10 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+        exclude: '../src/{DependencyInjection,Entity/Migrations,Tests,Kernel.php}'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Doctrine entity listener as service (attributes already present, but ensure service is public)
+    App\Doctrine\Listener\ProductEntityListener: ~
