--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@types/node": "^24.2.1",
+    "axios": "^1.7.7",
     "pinia": "^3.0.3",
     "typescript": "^5.9.2",
     "vue": "^3.5.18",
@@ -48,5 +49,6 @@
     "build-storybook:catalog": "storybook build -c assets/catalog/.storybook -o public/storybook-catalog",
     "storybook:admin": "storybook dev -p 6008 -c assets/admin/.storybook",
     "build-storybook:admin": "storybook build -c assets/admin/.storybook -o public/storybook-admin"
-  }
+  },
+  "packageManager": "npm@11.5.2+sha512.aac1241cfc3f41dc38780d64295c6c6b917a41e24288b33519a7b11adfc5a54a5f881c642d7557215b6c70e01e55655ed7ba666300fd0238bc75fb17478afaf3"
 }
