--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^24.2.1",
     "axios": "^1.7.7",
     "pinia": "^3.0.3",
+    "reka-ui": "^2.4.1",
     "typescript": "^5.9.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
