--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/security-bundle": "7.3.*",
         "symfony/security-csrf": "7.3.*",
         "symfony/serializer": "7.3.*",
+        "symfony/string": "7.3",
         "symfony/twig-bundle": "7.3.*",
         "symfony/validator": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.3",
