Добавлены новые зависимости @fancyapps/ui и swiper в package.json и package-lock.json. Реализована галерея изображений с использованием Swiper и Fancybox в шаблонах товара, улучшена логика обработки миниатюр и основного изображения. Обновлены стили для галереи и миниатюр, добавлены адаптивные стили. Создан сервис FooterCategoryService для получения категорий для подвала и обновлены шаблоны для их отображения.

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,7 @@
 twig:
     file_name_pattern: '*.twig'
+    globals:
+        footer_categories: '@App\Service\FooterCategoryService'
 
 when@test:
     twig:
