--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@fancyapps/ui": "^6.0.26",
     "@types/node": "^24.2.1",
     "axios": "^1.7.7",
     "pinia": "^3.0.3",
     "reka-ui": "^2.4.1",
+    "swiper": "^11.2.10",
     "typescript": "^5.9.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
