--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^24.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/compiler-sfc": "^3.5.18",
     "autoprefixer": "^10.4.21",
     "core-js": "^3.45.0",
     "cross-env": "^7.0.3",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.1.0",
     "regenerator-runtime": "^0.14.1",
     "storybook": "^8.6.14",
     "tailwindcss": "^3.4.17",
     "ts-loader": "^9.0.0",
+    "typescript": "^5.9.2",
     "vite": "^5.4.10",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
@@ -28,12 +31,10 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^6.0.26",
-    "@types/node": "^24.2.1",
     "axios": "^1.7.7",
     "pinia": "^3.0.3",
     "reka-ui": "^2.4.1",
     "swiper": "^11.2.10",
-    "typescript": "^5.9.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-tsc": "^3.0.5"
