--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "es2019",
     "module": "esnext",
     "moduleResolution": "bundler",
+    "outDir": "public/build",
+    "declaration": false,
+    "emitDeclarationOnly": false,
     "strict": true,
     "noImplicitAny": true,
     "noUncheckedIndexedAccess": true,
