Добавлены новые сервисы для категорий навигации и обновлены настройки шаблона. Реализован класс NavbarCategoryService для получения категорий, видимых в навигации. Обновлен файл конфигурации services.yaml и добавлены глобальные переменные в twig.yaml. Изменен шаблон navbar.html.twig для динамического отображения категорий.

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,7 @@ twig:
     file_name_pattern: '*.twig'
     globals:
         footer_categories: '@App\Service\FooterCategoryService'
+        navbar_categories: '@App\Service\NavbarCategoryService'
 
 when@test:
     twig:
