Добавлены функции для копирования товара с подтверждением и уведомлениями. Обновлен файл конфигурации services.yaml для добавления сервиса копирования товара.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -85,3 +85,8 @@ services:
     App\State\ProductStateProcessor:
         arguments:
             $cartItemRepository: '@App\Repository\CartItemRepository'
+
+    # Product copy service
+    App\Service\ProductCopyService:
+        arguments:
+            $lifecycleService: '@App\Service\ProductLifecycleService'
