--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^6.0.26",
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.7.7",
     "pinia": "^3.0.3",
     "reka-ui": "^2.4.1",
