Добавлены тесты для сервиса CartManager и InventoryService, включая интеграционные тесты для проверки функциональности добавления товаров с опциями в корзину. Реализованы проверки на недостаток запасов и валидность комбинаций опций. Обновлены классы ProductVariantService и InventoryService для поддержки новой логики работы с опциями товаров. Добавлены тесты для проверки доступности вариантов товаров и их комбинаций.

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ Thumbs.db
 # Custom files
 /warmup_cache.bat
 /warmup_md2.bat
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
