--- a/composer.json
+++ b/composer.json
@@ -91,6 +91,7 @@
         }
     },
     "require-dev": {
+        "phpunit/phpunit": "^12.3",
         "symfony/debug-bundle": "7.3.*",
         "symfony/maker-bundle": "^1.64",
         "symfony/var-dumper": "7.3.*",
