Добавлена оптимизированная версия Cart API с поддержкой различных режимов ответа (full, summary, delta) для улучшения производительности. Реализованы батч-операции, поддержка Idempotency-Key и улучшенная обработка ошибок. Обновлены методы API для работы с новыми режимами ответов и добавлены тесты для проверки функциональности. Обновлена документация по использованию нового API.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -126,6 +126,9 @@ services:
 
     App\Http\CartResponse: ~
 
+    # Cart delta builder for optimized responses
+    App\Service\CartDeltaBuilder: ~
+
     # Cart cookie factory for secure cookie management
     App\Http\CartCookieFactory:
         arguments:
