Добавлены новые файлы и конфигурации для генерации ратайм-артефактов, включая скрипты для обновления контейнера и получения информации о маршрутах, зависимостях и схемах БД. Обновлена документация по использованию новых инструментов для анализа и диагностики проекта.

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,10 @@ Thumbs.db
 /phpunit.xml
 /.phpunit.cache/
 ###< phpunit/phpunit ###
+
+# PHPStan cache and container dump
+/var/phpstan/
+/var/cache/dev/phpstan-container.xml
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
