Добавлены AI-метки и индекс для классов, улучшена документация по использованию AI-META. Созданы скрипты для генерации индекса и обновления маршрутов, добавлены новые правила для обработки данных и транзакций в сервисах и контроллерах.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+docs/runtime/ai-index.json linguist-generated
 docs/runtime/* linguist-generated
 docs/db/schema.sql linguist-generated
 docs/db/entities.txt linguist-generated
