--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,7 +12,7 @@ security:
                 property: name
     firewalls:
         api:
-            pattern: ^/api
+            pattern: ^/api(?!/admin)
             security: false
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -41,6 +41,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/api/admin, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: PUBLIC_ACCESS }
         - { path: ^/login$, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
