--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fancyapps/ui": "^6.0.26",
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.7.7",
+    "imask": "^7.6.1",
     "pinia": "^3.0.3",
     "reka-ui": "^2.4.1",
     "swiper": "^11.2.10",
